--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/adapter-mssql": "^6.19.0",
     "@prisma/client": "^6.18.0",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
