--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@prisma/client": "^6.18.0",
     "body-parser": "^2.2.0",
     "express": "^5.1.0",
-    "express-session": "^1.18.2"
+    "express-session": "^1.18.2",
+    "mongodb": "^7.0.0"
   },
   "devDependencies": {
     "prisma": "^6.18.0"
